--- a/src/view/AdminPage.form
+++ b/src/view/AdminPage.form
@@ -108,7 +108,7 @@
           <text value="Exit"/>
         </properties>
       </component>
-      <component id="ac1e4" class="javax.swing.JLabel">
+      <component id="ac1e4" class="javax.swing.JLabel" binding="lbl_top">
         <constraints>
           <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
